--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="main">
             <div class="navbar">
                 <div class="icon">
-                    <h1 class="logo"><a href="/"><img src="Untitled design.png" alt="LUCIDTEN Logo"/></a></h1>
+                    <h1 class="logo"><img src="Untitled design.png" alt="LUCIDTEN Logo"/></h1>
                 </div>
 
                 <div class="menu">
