--- a/script.js/index.html
+++ b/script.js/index.html
@@ -20,8 +20,12 @@
 
         <div class="tab-content">
             <div id="home" data-tab-content class="active">
-                <h1>Home</h1>
-                <p>This is home</p>
+                <br>
+                <p>
+                    <video controls height="500" width="1200" autoplay loop>
+                        <source src="lucidvideo.mp4" type="video/mp4">
+                    </video>
+                </p>
             </div>
             <div id="about" data-tab-content>
                 <h1>About Us</h1>
